# personalsite

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  DESIGN.json  DESIGN.md  PRODUCT.md  README.md  create-pinecone.py  tailwind.config.js  testing.py
.agents/skills/quote-harvest/: SKILL.md
.claude/: settings.local.json
.claude/skills/: frontend-aesthetics.md  premium-redesign.md
.github/workflows/: update-rag.yml
personalsite/: .gitignore  bench-chat.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.js
personalsite/.claude/: chat-ux-deferred.md  writing-essays-and-life.md
personalsite/tests/: chat-layout.test.mjs  workContext.test.mjs
python-rag/: README.md  bm25.py  create-pinecone.py  pyproject.toml  requirements.txt
python-rag/rag-docs/: faq.txt  involvement.yaml  karthik_thyagarajan_truth.yaml  opinions_and_takes.txt  personal_narrative.txt  projects_deep_dive.txt  summary.txt  topics.yaml
python-rag/rag-docs/corpus/: involvement_buildpurdue.md  project_caladrius.md  project_formulator.md  project_google-tools-mcp.md  project_kmeans-som.md  project_qkd.md  project_quantum-racer.md  project_repple.md  project_verbatim.md  project_veritas.md  topic_agents.md  work_agrpa.md  work_ideas-lab.md  work_memories-ai.md  work_memories.ai.md  work_naval-research-laboratory.md  work_peraton-labs.md  work_samsung-research-america.md
rag-docs/: karthik_thyagarajan_truth.yaml  projects.txt  summary.txt  work.txt
resume/: render_resume.py  render_tex.py  resume_output.tex  resume_truth.yaml
resume/templates/: resume.tex.j2
(+57 files in other folders)
